[package]
name = "trend-rs"
version = "0.2.0"
edition = "2021"
description = "Simple terminal graphs"
license = "MIT"
repository = "https://github.com/orf/trend/"

[[bin]]
name = "trend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
futures-util = "0.3.29"
itertools = "0.11.0"
ratatui = "0.24.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
